[package]
name = "rust-diy-argb-controller"
version = "0.1.0"
authors = ["Paulo Granthon <paulo.granthon@fatec.sp.gov.br>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-diy-argb-controller"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
ws2812-spi = "0.4.0"
smart-leds = "0.3.0"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
heapless = "0.9.1"
avr-device = "0.7.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["sparkfun-promicro"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = false
debug = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = false
debug = 0
